# app

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  compose.dev.yaml  compose.yaml  pyproject.toml
frontend/: .dockerignore  Dockerfile  Dockerfile.dev  next.config.ts  openapi.json  orval.config.ts  package-lock.json  package.json
frontend/src/api/: fetcher.ts
frontend/src/api/models/: bulkLineUpdate.ts  bulkLineUpdateStages.ts  chipInfo.ts  componentDetail.ts  componentDetailAmplifierType.ts  componentDetailCatalogKey.ts  componentDetailFilterType.ts  componentDetailGainDB.ts  componentDetailValueDB.ts  cooldownDetail.ts  cooldownDetailChip.ts  cooldownMeta.ts  createResponse.ts  createResponseSync.ts  cryoEntry.ts  hTTPValidationError.ts  index.ts  lineDetail.ts  lineDetailQubit.ts  lineDetailQubits.ts  lineDetailStages.ts  lineUpdate.ts  lineUpdateStages.ts  linesResponse.ts  metadataUpdate.ts  metadataUpdateNotes.ts  metadataUpdateOperator.ts  metadataUpdatePurpose.ts  moduleStage.ts  moduleTemplate.ts  newCooldownForCryoRequest.ts  newCooldownRequest.ts  (+22 more)
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: bulk-line-editor.tsx  cooldown-view.tsx  line-detail.tsx  line-editor-modal.tsx  metadata-editor-modal.tsx  new-cooldown-modal.tsx  new-cryo-modal.tsx  repo-setup-modal.tsx  sidebar.tsx  summary-table.tsx  templates-editor.tsx  wiring-diagram.tsx
frontend/src/types/: cooldown.ts
scripts/: export_openapi.py
src/cryo_wiring_app/: api.py  cli.py  repo.py
src/cryowire_app/: api.py  cli.py  repo.py
(+4 files in other folders)
