[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cryo-wiring-app"
version = "0.1.0"
description = "Web UI for cryo-wiring configuration manager"
requires-python = ">=3.11"
dependencies = [
    "cryo-wiring-core @ git+https://github.com/cryo-wiring/core.git",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "gitpython>=3.1",
    "typer>=0.9",
    "rich>=13.0",
    "pyyaml>=6.0",
    "matplotlib>=3.8",
]

[project.scripts]
cryo-wiring-app = "cryo_wiring_app.cli:app"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/cryo_wiring_app"]

[tool.hatch.build.targets.wheel.shared-data]
"templates" = "cryo_wiring_app/templates"

[dependency-groups]
dev = ["pytest>=8.0"]
